Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-32663

Resize cursor appears on fixed size dialog in Qt 5

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.2.0
    • 5.0.0
    • None
    • Windows 7
    • eb2ae61cb4ff3ec80859e7a563878d33df7a6758

    Description

      Regression from Qt 4.8.

      In Qt 4.8, creating a QDialog with a setFixedSize(x,y) will prevent on Windows to have resize cursor arrow in the border of the dialog, it's normal because the user can't do it.

      In Qt 5.x, the resize cursors is present even the dialog can't be resize, it's missleading the user.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-32663
          # Subject Branch Project Status CR V

          Activity

            People

              kleint Friedemann Kleint
              johnlamericain Jonathan Courtois
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes